# mpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/mpp/: algorithm.hpp  args.hpp  delegate.hpp  event.hpp  no_copy.hpp
include/mpp/io/: binary_reader.hpp  binary_writer.hpp  directory_info.hpp  file.hpp  file_info.hpp  file_stream.hpp  fs_item.hpp  path.hpp
include/mpp/memory/: imemstream.hpp  omemstream.hpp
tests/: CMakeLists.txt  algorithm.cxx  args.cxx  binary_reader.cxx  binary_writer.cxx  delegate.cxx  event.cxx  file.cxx  fs.cxx  imemstream.cxx  omemstream.cxx  path.cxx
